src/bindings.rs

/* automatically generated by rust-bindgen 0.69.4 */

pub const JPEG_LIB_VERSION: u32 = 80;
pub const LIBJPEG_TURBO_VERSION_NUMBER: u32 = 3000000;
pub const C_ARITH_CODING_SUPPORTED: u32 = 1;
pub const D_ARITH_CODING_SUPPORTED: u32 = 1;
pub const MEM_SRCDST_SUPPORTED: u32 = 1;
pub const WITH_SIMD: u32 = 1;
pub const BITS_IN_JSAMPLE: u32 = 8;
pub const MAX_COMPONENTS: u32 = 10;
pub const MAXJSAMPLE: u32 = 255;
pub const CENTERJSAMPLE: u32 = 128;
pub const JPEG_MAX_DIMENSION: u32 = 65500;
pub const FALSE: u32 = 0;
pub const TRUE: u32 = 1;
pub const DCTSIZE: u32 = 8;
pub const DCTSIZE2: u32 = 64;
pub const NUM_QUANT_TBLS: u32 = 4;
pub const NUM_HUFF_TBLS: u32 = 4;
pub const NUM_ARITH_TBLS: u32 = 16;
pub const MAX_COMPS_IN_SCAN: u32 = 4;
pub const MAX_SAMP_FACTOR: u32 = 4;
pub const C_MAX_BLOCKS_IN_MCU: u32 = 10;
pub const D_MAX_BLOCKS_IN_MCU: u32 = 10;
pub const JMSG_LENGTH_MAX: u32 = 200;
pub const JMSG_STR_PARM_MAX: u32 = 80;
pub const JPOOL_PERMANENT: u32 = 0;
pub const JPOOL_IMAGE: u32 = 1;
pub const JPOOL_NUMPOOLS: u32 = 2;
pub const JPEG_SUSPENDED: u32 = 0;
pub const JPEG_HEADER_OK: u32 = 1;
pub const JPEG_HEADER_TABLES_ONLY: u32 = 2;
pub const JPEG_REACHED_SOS: u32 = 1;
pub const JPEG_REACHED_EOI: u32 = 2;
pub const JPEG_ROW_COMPLETED: u32 = 3;
pub const JPEG_SCAN_COMPLETED: u32 = 4;
pub const JPEG_RST0: u32 = 208;
pub const JPEG_EOI: u32 = 217;
pub const JPEG_APP0: u32 = 224;
pub const JPEG_COM: u32 = 254;
pub type JSAMPLE = ::std::os::raw::c_char;
pub type JCOEF = ::std::os::raw::c_short;
pub type JOCTET = ::std::os::raw::c_char;
pub type UINT8 = ::std::os::raw::c_short;
pub type UINT16 = ::std::os::raw::c_uint;
pub type INT16 = ::std::os::raw::c_short;
pub type INT32 = ::std::os::raw::c_long;
pub type JDIMENSION = ::std::os::raw::c_uint;
pub type boolean = ::std::os::raw::c_int;
pub type wchar_t = ::std::os::raw::c_int;
#[repr(C)]
#[repr(align(16))]
#[derive(Debug, Copy, Clone)]
pub struct max_align_t {
    pub __clang_max_align_nonce1: ::std::os::raw::c_longlong,
    pub __bindgen_padding_0: u64,
    pub __clang_max_align_nonce2: u128,
}
#[test]
fn bindgen_test_layout_max_align_t() {
    const UNINIT: ::std::mem::MaybeUninit<max_align_t> = ::std::mem::MaybeUninit::uninit();
    let ptr = UNINIT.as_ptr();
    assert_eq!(
        ::std::mem::size_of::<max_align_t>(),
        32usize,
        concat!("Size of: ", stringify!(max_align_t))
    );
    assert_eq!(
        ::std::mem::align_of::<max_align_t>(),
        16usize,
        concat!("Alignment of ", stringify!(max_align_t))
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).__clang_max_align_nonce1) as usize - ptr as usize },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(max_align_t),
            "::",
            stringify!(__clang_max_align_nonce1)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).__clang_max_align_nonce2) as usize - ptr as usize },
        16usize,
        concat!(
            "Offset of field: ",
            stringify!(max_align_t),
            "::",
            stringify!(__clang_max_align_nonce2)
        )
    );
}
pub type JSAMPROW = *mut JSAMPLE;
pub type JSAMPARRAY = *mut JSAMPROW;
pub type JSAMPIMAGE = *mut JSAMPARRAY;
pub type JBLOCK = [JCOEF; 64usize];
pub type JBLOCKROW = *mut JBLOCK;
pub type JBLOCKARRAY = *mut JBLOCKROW;
pub type JBLOCKIMAGE = *mut JBLOCKARRAY;
pub type JCOEFPTR = *mut JCOEF;
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct JQUANT_TBL {
    pub quantval: [UINT16; 64usize],
    pub sent_table: boolean,
}
#[test]
fn bindgen_test_layout_JQUANT_TBL() {
    const UNINIT: ::std::mem::MaybeUninit<JQUANT_TBL> = ::std::mem::MaybeUninit::uninit();
    let ptr = UNINIT.as_ptr();
    assert_eq!(
        ::std::mem::size_of::<JQUANT_TBL>(),
        260usize,
        concat!("Size of: ", stringify!(JQUANT_TBL))
    );
    assert_eq!(
        ::std::mem::align_of::<JQUANT_TBL>(),
        4usize,
        concat!("Alignment of ", stringify!(JQUANT_TBL))
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).quantval) as usize - ptr as usize },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(JQUANT_TBL),
            "::",
            stringify!(quantval)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).sent_table) as usize - ptr as usize },
        256usize,
        concat!(
            "Offset of field: ",
            stringify!(JQUANT_TBL),
            "::",
            stringify!(sent_table)
        )
    );
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct JHUFF_TBL {
    pub bits: [UINT8; 17usize],
    pub huffval: [UINT8; 256usize],
    pub sent_table: boolean,
}
#[test]
fn bindgen_test_layout_JHUFF_TBL() {
    const UNINIT: ::std::mem::MaybeUninit<JHUFF_TBL> = ::std::mem::MaybeUninit::uninit();
    let ptr = UNINIT.as_ptr();
    assert_eq!(
        ::std::mem::size_of::<JHUFF_TBL>(),
        552usize,
        concat!("Size of: ", stringify!(JHUFF_TBL))
    );
    assert_eq!(
        ::std::mem::align_of::<JHUFF_TBL>(),
        4usize,
        concat!("Alignment of ", stringify!(JHUFF_TBL))
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).bits) as usize - ptr as usize },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(JHUFF_TBL),
            "::",
            stringify!(bits)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).huffval) as usize - ptr as usize },
        34usize,
        concat!(
            "Offset of field: ",
            stringify!(JHUFF_TBL),
            "::",
            stringify!(huffval)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).sent_table) as usize - ptr as usize },
        548usize,
        concat!(
            "Offset of field: ",
            stringify!(JHUFF_TBL),
            "::",
            stringify!(sent_table)
        )
    );
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct jpeg_component_info {
    pub component_id: ::std::os::raw::c_int,
    pub component_index: ::std::os::raw::c_int,
    pub h_samp_factor: ::std::os::raw::c_int,
    pub v_samp_factor: ::std::os::raw::c_int,
    pub quant_tbl_no: ::std::os::raw::c_int,
    pub dc_tbl_no: ::std::os::raw::c_int,
    pub ac_tbl_no: ::std::os::raw::c_int,
    pub width_in_blocks: JDIMENSION,
    pub height_in_blocks: JDIMENSION,
    pub DCT_scaled_size: ::std::os::raw::c_int,
    pub downsampled_width: JDIMENSION,
    pub downsampled_height: JDIMENSION,
    pub component_needed: boolean,
    pub MCU_width: ::std::os::raw::c_int,
    pub MCU_height: ::std::os::raw::c_int,
    pub MCU_blocks: ::std::os::raw::c_int,
    pub MCU_sample_width: ::std::os::raw::c_int,
    pub last_col_width: ::std::os::raw::c_int,
    pub last_row_height: ::std::os::raw::c_int,
    pub quant_table: *mut JQUANT_TBL,
    pub dct_table: *mut ::std::os::raw::c_void,
}
